<resources>
    <string-array name="select_language">
        <item>English</item>
        <item>Thai</item>
    </string-array>
    <string name="app_name" translatable="false">PlutoPe</string>
    <string name="title_activity_base" translatable="false">BaseActivity</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="clientid" translatable="false">992295208788-pvkm9hotbtcgheod11380ms1nipo199k.apps.googleusercontent.com</string>
    <string name="channel_key" translatable="false">eyJzZXR0aW5nc191cmwiOiJodHRwczovL3BsdXRvcGVoZWxwZGVzay56ZW5kZXNrLmNvbS9tb2JpbGVfc2RrX2FwaS9zZXR0aW5ncy8wMUoyWlFNQlc0UzJLWDY0VjJSTjhHVlo2Wi5qc29uIn0=</string>
    <string name="msg_init_success" translatable="false">Initialization Successful</string>
    <string name="msg_init_error" translatable="false">Initialization Failed</string>
    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="wallet_setup">Wallet Setup</string>
    <string name="create_a_new_wallet">Create New Wallet</string>
    <string name="import_using_secret_recovery_phrase">Import Using Secret Phrase</string>
    <string name="lorem_ipsum_dolor_sit_amet_consetetur_adipscing_elitr_sed_diam_nonumy_eirmod_tempor_invidunt_ut_labore_et_dolore_magna" translatable="false">Lorem ipsum dolor sit amet, consetetur adipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms Of Service</string>
    <string name="_continue">Continue</string>
    <string name="lorem_ipsum_dolor_sit_amet_consetetur_adipscing_elitr_sed_diam_nonumy_eirmod_tempor" translatable="false">Lorem ipsum dolor sit amet, consetetur adipscing elitr, sed diam nonumy eirmod tempor</string>
    <string name="create_passcode">Create Passcode</string>
    <string name="confirm_passcode">Confirm Passcode</string>
    <string name="secret_phrase_backup">Secret Phrase Backup</string>
    <string name="back_up_manually">Back Up Manually</string>
    <string name="back_up_to_icloud">Back Up to Google Drive</string>
    <string name="back_up_your_wallet_now">Back up your wallet now!</string>
    <string name="in_the_next_step_you_will_see_secret_phrase_12_words_that_allows_you_to_recover_a_wallet">In the next step you will see Secret Phrase (12 words) that allows you to recover a wallet.</string>
    <string name="if_lose_my_secret_phrase_my_funds_will_be_lost_forever">If lose my secret phrase, my funds will be lost forever.</string>
    <string name="if_expose_or_share_my_secret_phrase_to_anybody_my_funds_can_get_stolen">If expose or share my secret phrase to anybody, my funds can get stolen.</string>
    <string name="trust_wallet_support_will_never_reach_out_to_ask_for_it">PlutoPe support will NEVER reach out to ask for it.</string>
    <string name="name_your_backup">Name your backup</string>
    <string name="backup_name">Backup Name</string>
    <string name="include_at_least_1_character">include at least 1 character</string>
    <string name="do_not_delete_this_backup_file_on_google_drive_or_you_risk_losing_all_your_crypto">Do not delete this backup file on Google drive, or you risk losing all your crypto!</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="cancel">Cancel</string>
    <string name="_0" translatable="false">0</string>
    <string name="set_encryption_password">Set encryption password</string>
    <string name="password">Password</string>
    <string name="at_least_8_characters_including_one_upper_case_letter_one_lower_case_letter_one_number_and_one_symbol">At least 8 characters, including one upper-case letter, one lower-case letter, one number, and one symbol.</string>
    <string name="do_not_lose_this_password_as_trust_wallet_cannot_reset_it_for_you">Do not lose this password, as PlutoPe cannot reset it for you!</string>
    <string name="enter_the_financial_freedom">Enter the Financial Freedom</string>
    <string name="never_share_your_secret_phrase_with_anyone">Never share your secret phrase with anyone</string>
    <string name="your_12_word_secret_phrase_is_only_way_to_recover_your_wallet_please_store_it_securely">Your 12-word secret phrase is only way to recover your wallet. Please store it securely!</string>
    <string name="confirm_encryption_password">Confirm encryption password</string>
    <string name="confirm">Confirm</string>
    <string name="copy">Copy</string>
    <string name="tap_the_words_to_put_them_next_to_each_other_in_the_correct_order">Tap the words to put them next to each other in the correct order.</string>
    <string name="done">Done</string>
    <string name="invalid_order_contain">Invalid order.Try again!</string>
    <string name="multi_chain_amp_lightning_fast" translatable="false"><![CDATA[Multi-Chain & Lightning fast]]></string>
    <string name="one_wallet_amp_unlimited_possibilities" translatable="false"><![CDATA[One Wallet & Unlimited Possibilities]]></string>
    <string name="wallet">Wallet</string>
    <string name="current_balance">Current Balance</string>
    <string name="nfts">My NFTs</string>
    <string name="assets">My Assets</string>
    <string name="search">Search...</string>
    <string name="search_">Search</string>
    <string name="send">Send</string>
    <string name="your_coins">Your Coins</string>
    <string name="all_coins">All Coins</string>
    <string name="receive">Receive</string>
    <string name="swap">Swap</string>
    <string name="initiated">Initiated</string>
    <string name="swapping">Swapping</string>
    <string name="success">Success</string>
    <string name="you_pay">You Pay</string>
    <string name="balance">Balance: </string>
    <string name="ethereum" translatable="false">Ethereum</string>
    <string name="wallets">Wallets</string>
    <string name="security">Security</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="help_center">Help Center</string>
    <string name="about_plutope">About PlutoPe</string>
    <string name="card">Card</string>
    <string name="expire">Expire</string>
    <string name="transactions">Transactions</string>
    <string name="_new">New</string>
    <string name="earlier">Earlier</string>
    <string name="buy_bitcoin">Buy Bitcoin</string>
    <string name="third_party_provider">Third Party Provider</string>
    <string name="currency">Currency</string>
    <string name="receive_bitcoin">Receive Bitcoin</string>
    <string name="no_nfts_yet">No NFTs yet</string>
    <string name="enable">Enable</string>
    <string name="bitcoin" translatable="false">Bitcoin</string>
    <string name="about_bitcoin" translatable="false">About Bitcoin</string>
    <string name="market_cap">Market Cap</string>
    <string name="volume_24h">Volume (24h)</string>
    <string name="circulating_supply">Circulating Supply</string>
    <string name="total_supply">Total Supply</string>
    <string name="well_done">Well done!</string>
    <string name="add_custom_token">Add Custom Token</string>
    <string name="network">Network</string>
    <string name="add">Add</string>
    <string name="contract_address">Contract Address</string>
    <string name="name">Name</string>
    <string name="symbol">Symbol</string>
    <string name="decimals">Decimals</string>
    <string name="what_is_custom_token">What is Custom Token?</string>
    <string name="paste">Paste</string>
    <string name="multi_coin_wallets">Multi-Coin Wallets</string>
    <string name="import_multi_coin_wallet">Import Multi-Coin Wallet</string>
    <string name="phrase">Phrase</string>
    <string name="typically_12_sometimes_18_24_words_seprated_by_single_spaces">Typically 12 (Sometimes 18,24) words separated by single spaces</string>
    <string name="what_is_secret_phrase">What is Secret Phrase?</string>
    <string name="import_">Import</string>
    <string name="main_wallet" translatable="false">Main Wallet</string>
    <string name="description">description</string>
    <string name="wallet_name">Wallet Name*</string>
    <string name="phrase_label">Secret Phrase*</string>
</resources>