<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="importMultiWalletViewModel"
            type="com.app.plutope.ui.fragment.wallet.import_multi_wallet.ImportMultiWalletViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_white"
            tools:context=".ui.fragment.wallet.import_multi_wallet.ImportMultiWallet">


            <ImageView
                android:id="@+id/img_back"
                android:layout_width="@dimen/_50mdp"
                android:layout_height="@dimen/_50mdp"
                android:layout_marginStart="@dimen/_10mdp"
                android:layout_marginTop="@dimen/_10mdp"
                android:focusable="true"
                android:foreground="@drawable/ripple_effect"
                android:padding="@dimen/_8mdp"
                android:src="@drawable/ic_back_new"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/violet_sans"
                android:text="@string/import_multi_coin_wallet"
                android:textColor="@color/black"
                android:textSize="@dimen/_18msp"
                app:layout_constraintBottom_toBottomOf="@id/img_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/img_back" />


            <ImageView
                android:id="@+id/img_add_wallet"
                android:layout_width="@dimen/_40mdp"
                android:layout_height="@dimen/_40mdp"
                android:layout_marginEnd="@dimen/_19mdp"
                android:background="@drawable/bg_corner_radius_35"
                android:padding="@dimen/_10mdp"
                android:src="@drawable/ic_copy_dash"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/img_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/img_back" />


            <TextView
                android:id="@+id/txt_wallet_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20mdp"
                android:layout_marginTop="@dimen/_30mdp"
                android:fontFamily="@font/violet_sans"
                android:lineSpacingExtra="@dimen/_10msp"
                android:text="@string/wallet_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_14msp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_toolbar_title" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_wallet_name"
                style="@style/edittext_fill_bg_style_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20mdp"
                android:layout_marginVertical="@dimen/_15mdp"
                android:fontFamily="@font/violet_sans"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_14mdp"
                android:text="@string/main_wallet"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/_14msp"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_wallet_name" />

            <TextView
                android:id="@+id/txt_phrases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30mdp"
                android:fontFamily="@font/violet_sans"
                android:lineSpacingExtra="@dimen/_10msp"
                android:text="@string/phrase_label"
                android:textColor="@color/black"
                android:textSize="@dimen/_14msp"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="@id/txt_wallet_name"
                app:layout_constraintStart_toStartOf="@id/txt_wallet_name"
                app:layout_constraintTop_toBottomOf="@id/edt_wallet_name" />


            <EditText
                android:id="@+id/edt_phrases"
                style="@style/edittext_fill_bg_style_multiple_line_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150mdp"
                android:layout_marginTop="@dimen/_10mdp"
                android:cursorVisible="true"
                android:focusable="true"
                android:gravity="top|start"
                android:hint="@string/phrase"
                android:inputType="textMultiLine"
                android:paddingStart="@dimen/_14mdp"
                android:paddingTop="@dimen/_18mdp"
                android:paddingEnd="@dimen/_14mdp"
                android:paddingBottom="@dimen/_30mdp"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="@id/txt_phrases"
                app:layout_constraintStart_toStartOf="@id/txt_phrases"
                app:layout_constraintTop_toBottomOf="@id/txt_phrases" />

            <ImageView
                android:id="@+id/txt_paste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10mdp"
                android:layout_marginBottom="@dimen/_10mdp"
                android:fontFamily="@font/quicksand_regular"
                android:src="@drawable/ic_paste_new"
                android:text="@string/paste"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/edt_phrases"
                app:layout_constraintEnd_toEndOf="@id/edt_phrases" />

            <TextView
                android:id="@+id/txt_instruction_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_27mdp"
                android:layout_marginTop="@dimen/_20mdp"
                android:fontFamily="@font/violet_sans"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/_10msp"
                android:text="@string/typically_12_sometimes_18_24_words_seprated_by_single_spaces"
                android:textColor="@color/black"
                android:textSize="@dimen/_12msp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_phrases" />

            <Button
                android:id="@+id/btn_import"
                style="@style/wallet_button_gradient"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50mdp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_30mdp"
                android:layout_marginTop="@dimen/_70mdp"
                android:layout_marginBottom="@dimen/_26mdp"
                android:text="@string/import_"
                android:textAllCaps="false"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toTopOf="@id/txt_secret_phrase_instruction"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_instruction_message"
                app:layout_constraintVertical_bias="1" />


            <TextView
                android:id="@+id/txt_secret_phrase_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20mdp"
                android:fontFamily="@font/violet_sans"
                android:gravity="center_horizontal"
                android:text="@string/what_is_secret_phrase"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_15msp"
                app:layout_constraintBottom_toBottomOf="@id/guid"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.95" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>